fixed quick links, might update later because font is kind of hard to read

--- a/fonts.css
+++ b/fonts.css
@@ -20,7 +20,6 @@ a:active { text-decoration: none; }
 
 .title{
     color: lightgreen;
-    display: flex;
     justify-content: center;
     /*font-palette: --Nabla;
     font-family: 'Nabla', sans-serif;*/
@@ -29,66 +28,62 @@ a:active { text-decoration: none; }
 }
 
 
-.nabladivresume:hover{
-    font-size: 7vw;
-    letter-spacing: -20;
-}
 .nabladivabout {
-    letter-spacing: -15px;
-    padding-left: 0vh;
-    padding-top: 0vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: right;
-    rotate: -20deg;
+    float: left;
+    width: 16.666666666666666666666666666%;
+    padding: 10px;
+    rotate: -30deg
 }
 .nabladivprojects {
-    letter-spacing: -15px;
-    padding-left: 40vw;
-    padding-top: 5vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: right;
-    rotate: -20deg;
+    float: left;
+    width: 20%;
+    padding: 10px;
+    rotate: -30deg
 }
 .nabladivskills {
-    letter-spacing: -15px;
-    padding-left: 100vh;
-    padding-top: 0vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: left;
-    rotate: -20deg;
+    float: left;
+    width: 16.666666666666666666666666666%;
+    padding: 10px;
+    rotate: -30deg
 }
 
 .nabladivresume {
-    letter-spacing: -15px;
-    padding-left: 1200vh;
-    padding-top: 0vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: left;
-    rotate: -20deg;
+    float: left;
+    width: 16.666666666666666666666666666%;
+    padding: 10px;
+    rotate: -30deg
 }
 
 .nabladivitg {
-    letter-spacing: -15px;
-    padding-left: 140vh;
-    padding-top: 0vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: left;
-    rotate: -20deg;
+    float: left;
+    width: 13.3333333333333333333333333%;
+    padding: 10px;
+    rotate: -30deg
 }
 
 .nabladivrun{
-    letter-spacing: -15px;
-    padding-left: 160vh;
-    padding-top: 0vh;
-    font-size: 6vw;
+    letter-spacing: -1vw;
+    font-size: 5vw;
     height: 0vh;
-    justify-content: left;
-    rotate: -20deg;
+    float: left;
+    width: 16.666666666666666666666666666%;
+    padding: 10px;
+    rotate: -30deg
 }
 .mynabla1 {
     font-family: "Nabla", system-ui;
@@ -127,7 +122,7 @@ font-variation-settings:
 
 .sectionHeader{
     color: rgb(255, 255, 255);
-    background: radial-gradient(#000000, grey);
+    background: radial-gradient(#000000, #111111);
     display: flex;
     justify-content: center;
     font-size: 5vw; 
@@ -166,7 +161,7 @@ font-variation-settings:
 /* Create two equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33%;
+    width: 50%;
     padding: 10px;
   }
   
